<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TravelAid</string>
    <string name="google_places_api_key">AIzaSyBs_swJIIe4nGszJPxn3qfbKonsiumSFsg</string>
    <string name="food">Food</string>
    <string name="museum">Museum</string>
    <string name="back">Back</string>
    <string name="routeMeThere">Route me there</string>
    <string name="remove">remove favourite</string>
    <string name="add">add to favourite</string><string name="navigation">Navigation</string>
    
    <string name="social">Check recent comments</string>
    <string name="icon">Icon</string>
    <string name="exit">Exit</string>
    
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register new account</string>
    
    <string name="email">Email</string>
    <string name="pw">Password</string>
    <string name="name">User name to display</string>
    
    <string name="comment">Comment</string>
    <string name="registerButton">Register</string>
    <string name="loading">Loading...</string>
    <string name="rate">Rated by %d user</string>
    <string name="avg">Average: %.1f </string>
    
    <string name="hideInst">Hide instructions</string>
    <string name="showInst">Show instructions</string>
    <string name="hideMap">Hide map</string>
    <string name="showMap">Show map</string>
    <string name="alternative">Alternatives</string>
    
    
</resources>
