<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="horizontal" android:id="@+id/main_view" android:background="#00000000" xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout android:layout_width="wrap_content" android:layout_alignParentTop="true"
		android:id="@+id/LLA_top" android:layout_height="wrap_content">

		<HorizontalScrollView android:layout_height="wrap_content"
			android:id="@+id/sTop" android:layout_width="wrap_content"
			android:fadingEdgeLength="40dip" android:scrollbars="horizontal"
			android:layout_marginTop="3dip">

			<LinearLayout android:id="@+id/LinLay_top"
			    android:orientation="vertical"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:gravity="center_vertical">
				
			    <LinearLayout
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:orientation="horizontal" >
			    	<Button 
			    	    android:id="@+id/alternative"
			    	    style="?android:attr/buttonStyleSmall"
					    android:layout_width="match_parent"
					    android:layout_height="wrap_content"
					    android:text="@string/alternative"/>
					<Button
					    android:id="@+id/showInst"
					    style="?android:attr/buttonStyleSmall"
					    android:layout_width="match_parent"
					    android:layout_height="wrap_content"
					    android:text="@string/showInst"
					    android:visibility="gone" />
					
					<Button
					    android:id="@+id/hideInst"
					    style="?android:attr/buttonStyleSmall"
					    android:layout_width="match_parent"
					    android:layout_height="wrap_content"
					    android:text="@string/hideInst" />
				    
					<Button
					    android:id="@+id/showMap"
					    style="?android:attr/buttonStyleSmall"
					    android:layout_width="match_parent"
					    android:layout_height="wrap_content"
					    android:text="@string/showMap"
					    android:visibility="gone" />
					
					<Button
					    android:id="@+id/hideMap"
					    style="?android:attr/buttonStyleSmall"
					    android:layout_width="match_parent"
					    android:layout_height="wrap_content"
					    android:text="@string/hideMap" />
			</LinearLayout>
			    
			</LinearLayout>
		</HorizontalScrollView>
	</LinearLayout>


	<LinearLayout android:layout_height="fill_parent"
		android:orientation="vertical" android:layout_above="@+id/LLA_bottom"
		android:layout_below="@+id/LLA_top" android:layout_width="wrap_content"
		android:id="@+id/LLA_left">


		<ScrollView android:layout_width="wrap_content"
			android:fadingEdgeLength="30dip" android:layout_height="wrap_content"
			android:id="@+id/sLeft" android:scrollbars="vertical">
			<LinearLayout android:id="@+id/LinLay_left"
				android:orientation="vertical" android:layout_width="wrap_content"
				android:layout_height="wrap_content"></LinearLayout>
		</ScrollView>
	</LinearLayout>

<LinearLayout
    android:id="@+id/LLA_right"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:layout_above="@+id/LLA_bottom"
    android:layout_alignParentRight="true"
    android:layout_alignParentTop="true"
    android:orientation="vertical" >
		
		<LinearLayout
		    android:id="@+id/LinLay_right"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" >
		    
		    
		</LinearLayout>
		
		<ScrollView
		    android:id="@+id/sRight"
		    android:layout_width="200dp"
		    android:layout_height="0dp"
		    android:layout_weight="1"
		    android:fadingEdgeLength="30dip"
		    android:scrollbars="vertical" >

					<TextView
					    android:id="@+id/instructions"
					    android:layout_width="200dp"
					    android:layout_height="wrap_content"
					    android:layout_gravity="right"
					    android:text="" />
		</ScrollView>
		
	</LinearLayout>
    
    <LinearLayout
        android:id="@+id/LLA_bottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="bottom" >

		<HorizontalScrollView android:layout_height="fill_parent"
			android:id="@+id/sBottom" android:fadingEdgeLength="25dip"
			android:scrollbars="horizontal" android:layout_width="fill_parent" android:layout_weight="1">

			<LinearLayout android:id="@+id/LinLay_bottom"
			    android:orientation="horizontal"
				android:layout_width="fill_parent" android:layout_height="fill_parent"
				android:gravity="center_vertical"></LinearLayout>
		</HorizontalScrollView>

		<LinearLayout android:id="@+id/LinLay_bottomRight"
		    android:orientation="horizontal"
			android:layout_width="wrap_content" android:layout_height="fill_parent"
			android:gravity="center">
			
		    <fragment
		        android:id="@+id/map"
		        android:name="com.google.android.gms.maps.MapFragment"
		        android:layout_width="200dp"
		        android:layout_height="125dp" />
		    
		</LinearLayout>
	</LinearLayout>
	
    
    
</RelativeLayout>
